<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.login.LoginActivity">
    
    <ImageView
        android:id="@+id/iv_logo_spotify"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_company_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_username"
        app:layout_constraintTop_toBottomOf="@id/iv_logo_spotify"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_hint_password"
        app:passwordToggleEnabled="true"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    
    <Button
        android:id="@+id/btn_login"
        android:text="@string/text_btn_login"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_action_sso_facebook"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/bg_button_sso"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintRight_toLeftOf="@id/ll_action_sso_gmail"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:id="@+id/ic_facebook"
            android:src="@drawable/ic_facebook"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_placeholder_facebook"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action_sso_gmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="center"
        android:background="@drawable/bg_button_sso"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintLeft_toRightOf="@id/ll_action_sso_facebook"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:id="@+id/ic_gmail"
            android:src="@drawable/ic_gmail"
            android:layout_width="25dp"
            android:layout_height="25dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/text_placeholder_gmail"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAlignment="center"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>